Fixed colors in fall and blue themes, weird margins in exhibit text blocks, subnavigation widths, and properly aligned sidebar in items/show.

--- a/css/sass/_fall.scss
+++ b/css/sass/_fall.scss
@@ -150,6 +150,10 @@ header #about p {
     color:#fff;
 }
 
+.tagline {
+    color: #ccc;
+}
+
 #search-container {
     background-color: $gold;
 }
